--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "audit": "^0.0.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-router": "^0.0.1",
     "firebase-admin": "^12.2.0",
+    "helmet": "^7.1.0",
     "http-proxy-middleware": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
-    "pg-promise": "^11.6.0"
+    "pg-promise": "^11.6.0",
+    "validator": "^13.12.0"
   }
 }
