--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^7.1.0",
     "http-proxy-middleware": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
